--- a/StrazzGPT/Views/Home/Privacy.cshtml
+++ b/StrazzGPT/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 style="color: gold;">Privacy Policy</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p style="color: gold;">Don't steal my code without referance. That's it. </p>
