--- a/StrazzGPT/Views/Chat/Chat.cshtml
+++ b/StrazzGPT/Views/Chat/Chat.cshtml
@@ -1,4 +1,7 @@
-﻿<head>
+﻿@{
+    ViewData["Title"] = "Chat";
+}
+<head>
     <link rel="stylesheet" href="~/css/chat.css" asp-append-version="true" />
 </head>
 <body>
