--- a/StrazzGPT/Views/Home/Privacy.cshtml
+++ b/StrazzGPT/Views/Home/Privacy.cshtml
@@ -1,6 +1,24 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1 style="color: gold;">Privacy Policy</h1>
 
-<p style="color: gold;">Don't steal my code without referance. That's it. </p>
+<head>
+    <link rel="stylesheet" href="~/css/privacy.css" asp-append-version="true" />
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p>
+            By using this application, you agree to our terms of use, including the recording and storage of prompts and responses for the purpose of improving our services. We are committed to protecting and respecting your privacy.
+        </p>
+        <p>
+            All data collected through the application is used solely to enhance our algorithms and provide you with a better user experience.<br> We ensure that all information is processed in compliance with applicable laws and regulations.
+        </p>
+        <p>
+            For more information on how we handle data, or if you have any questions about your privacy rights, please contact <a class="home-link" href="mailto:lukestrazzera@gmail.com">lukestrazzera@gmail.com</a>.
+        </p>
+        <div class="footer">
+            © 2024 StrazzGPT. All rights reserved.
+        </div>
+    </div>
+</body>
